# PcapQt

./: PcapQt.spec  README.md  build.bat  import sys.txt  install.bat  main.py  package-lock.json  pyproject.toml  run.bat  ui_pcapqt.py  ui_pcapqt.ui
models/: __init__.py  packet_table_model.py
pcapqt/: main.py  ui_pcapqt.py
pcapqt/models/: packet_detail_model.py
pcapqt/threads/: sniffer_thread.py
pcapqt/utils/: __init__.py  checksum_validator.py  dns_resolver.py  expert_info.py  file_handler.py  helpers.py  packet_coloring.py  packet_parser.py  security_analyzer.py  statistics_calculator.py  tcp_analyzer.py
pcapqt/utils/protocol_parsers/: __init__.py  application_parsers.py  constants.py  icmpv6_parser.py  ipv6_parser.py
pcapqt/views/: capture_filter_dialog.py  conversations_dialog.py  endpoints_dialog.py  find_dialog.py  goto_dialog.py  hex_dump_widget.py  main_window.py  protocol_hierarchy_dialog.py  security_alerts_dialog.py  statistics_dialog.py
threads/: __init__.py
utils/: packet_parser.py
views/: main_window.py
