[project]
name = "pcapqt"
version = "0.1.0"
description = "My python project used to capture package use npcap"
authors = [
    {name = "ghuyxd",email = "ghuyxdz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt5",
    "pyqt5-tools",
    "scapy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
